--- a/_posts/2025-05-07-why-freegamesonline-ee.html
+++ b/_posts/2025-05-07-why-freegamesonline-ee.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Why choose FreeGamesOnline.ee?"
-date: 2025-05-08 16:34:00 -0000
+date: 2025-05-07
 categories: why
 ---
 
