--- a/_posts/2025-05-07-why-freegamesonline-ee.html
+++ b/_posts/2025-05-07-why-freegamesonline-ee.html
@@ -9,8 +9,9 @@ categories: why
 <strong>Note:</strong> Everything in this blog is based of personal advice.
 </div>
 
-Here are <strong>3</strong> reasons to use [FreeGamesOnline.ee](https://freegamesonline-ee.github.io):
-- Fun Games
-- Games constantly added
-- Taking games requests
-
+Here are <strong>3</strong> reasons to use <a href="https://freegamesonline-ee.github.io">FreeGamesOnline.ee</a>:
+<ul>
+  <li>Fun Games</li>
+  <li>Games constantly added</li>
+  <li>Taking games requests</li>
+</ul>
