--- a/_posts/2025-05-08-how-freegamesonline-ee-is-made.html
+++ b/_posts/2025-05-08-how-freegamesonline-ee-is-made.html
@@ -19,3 +19,5 @@ Even though Jekyll and GitHub Pages are the #1 used things on <a href="https://f
 </ol>
 
 There's a few things to consider for Python and Shell, we only use those to generate games pages (Python) and automatic Git commands like <code>git pull</code> or <code>git push</code> (Shell).
+And let's not forget this blog!
+This blog mainly uses HTML and SCSS, but also uses Shell for the same reason!
