--- a/_posts/2025-05-08-how-freegamesonline-ee-is-made.html
+++ b/_posts/2025-05-08-how-freegamesonline-ee-is-made.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "How was FreeGamesOnline.ee amde?"
+title: "How was FreeGamesOnline.ee made?"
 date: 2025-05-08
 categories: how
 ---
